# unicode-id-trie-rle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
baseline/: Cargo.toml  README.md  build.rs
baseline/src/: lib.rs
benchmark/: Cargo.toml
benchmark-results/: machine-readable-output.jsonl  regular-output.txt
benchmark/benches/: ascii_0.rs  ascii_10.rs  ascii_100.rs  ascii_50.rs  ascii_90.rs  common.rs
benchmark/corpus/ascii-0/: len128.txt  len32.txt  len512.txt
benchmark/corpus/ascii-10/: len128.txt  len32.txt  len512.txt
benchmark/corpus/ascii-100/: len128.txt  len32.txt  len512.txt
benchmark/corpus/ascii-50/: len128.txt  len32.txt  len512.txt
benchmark/corpus/ascii-90/: len128.txt  len32.txt  len512.txt
benchmark/src/: lib.rs
c/: README.md  generate.c  unicode_data.h  unicode_identifiers.c  unicode_identifiers_test.c
delta-encoded/: Cargo.toml  build.rs
delta-encoded/proptest-regressions/: lib.txt
delta-encoded/src/: lib.rs
derived_core_properties/: Cargo.toml  README.md
derived_core_properties/proptest-regressions/: lib.txt
derived_core_properties/src/: lib.rs
go/: LICENSE  README.md  go.mod  ident.go  ident_generated.go  ident_test.go
go/generate/: main.go
run-indexed/: Cargo.toml  build.rs
run-indexed/src/: lib.rs
unicode-id-start/: Cargo.toml
unicode-id-start/proptest-regressions/: lib.txt
unicode-id-start/src/: lib.rs
unicode-id-trie-rle/: Cargo.toml  README.md  build.rs
unicode-id-trie-rle/src/: lib.rs
xid-visualization/: Cargo.toml
xid-visualization/src/: main.rs
