[package]
name = "unicode-id-trie-rle"
description = "Unicode identifier (UAX #31) checker using a deduplicated trie with run-length encoded leaves."
authors = ["Ayman El Didi <ayman@eldidi.org>"]
categories = ["no-std", "no-std::no-alloc"]
documentation = "https://docs.rs/unicode-id-trie-rle"
keywords = ["unicode", "id"]
version = "1.0.0"
edition = "2024"
repository = "https://github.com/aeldidi/unicode-id-trie-rle"
readme = "README.md"
license = "Unicode-3.0 AND (0BSD OR CC0-1.0 OR Unlicense)"
rust-version = "1.91.1"

[build-dependencies]
# ensure same version as in this repository
unicode-id-trie-rle-derived-core-properties = { version = "0.1.0", path = "../derived_core_properties" }

[dependencies]

[dev-dependencies]
# ensure same version as in this repository
unicode-id-trie-rle-derived-core-properties = { version = "0.1.0", path = "../derived_core_properties" }
proptest = { version = "1", default-features = false, features = ["std"] }
